--- a/index.html
+++ b/index.html
@@ -1,14 +1,78 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Charles Houston</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
-</head>
-<body>
-    <p>HELLO</p>
-</body>
+<html lang="en-US">
+
+  <head>
+    <meta charset="UTF-8">
+    <title>Charlie Houston</title>
+    <link  rel="stylesheet" href="assets/style.css">
+  </head>
+
+  <body>
+    <!-- Site Header -->
+    <header>
+      <h1>
+          <a href="/">Charles Houston</a>
+        </h1>
+        <nav>
+    <!--Unordered list-->
+            <ul>
+    <!--List items-->
+                <li>
+                    <a href="#bio">Bio</a>
+                </li>
+                <li>
+                    <a href="#portfolio">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#contact-me">Contact Me</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <!--Hero Section-->
+        <section class="hero">
+            <div class="hero-subtitle">
+            <h2>Cool Subtitle Here!</h2>
+            </div>
+        </section>
+    <!--BIO-->
+        <section id="=bio" class="bio">
+            <h3 class="section-title primary border">Bio</h3>
+            <h4>I am an aspiring freelance web designer and developer</h4>
+            <p>
+                I've spent the last year of my professional life learning and helping clients find their visual identities and bring them to light in the best way possible. </br>
+                I have worked with small and large businesses including [insert examples here], [here], and [here].
+            </p>
+        </section>
+    <!--PORTFOLIO-->
+        <section id="portfolio" class="work">
+            <h3 class="">Portfolio</h3>
+            <h4>I help businesses create a brand or identity that is clear, strong, and reflective of what they are as an entity.</h4>
+        </section>
+    <!--CONTACT ME-->
+        <section id="contact-me" class="contact">
+            <h3 class="">Contact Me</h3>
+            <div class="contact-info">
+                <h4>Charlie Houston</h4>
+                <ul>
+                    <li>
+                        <a href="tel:2104457296">210-445-7296</a>
+                    </li>
+                    <li>
+                        <a href="mailto:gn4rtistic@gmail.com">gn4rtistic@gmail.com</a>
+                    </li>
+                    <li>
+                    <a href="https://github.com/gnartistic">Github</a>
+                    </li>
+                    <li>
+                        <a href="https://open.spotify.com/user/9o7s9mescfet5m7u7e65rcmxm">Spotify</a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/gn4rtistic/">Instagram</a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+  </body>
+
 </html>
