css style sheet started

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Charlie Houston</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link  rel="stylesheet" href="assets/style.css">
+    
   </head>
 
   <body>
@@ -32,28 +34,33 @@
     <!--Hero Section-->
         <section class="hero">
             <div class="hero-subtitle">
-            <h2>Cool Subtitle Here!</h2>
+            <h2>Welcome!</h2>
             </div>
         </section>
     <!--BIO-->
         <section id="=bio" class="bio">
-            <h3 class="section-title primary border">Bio</h3>
-            <h4>I am an aspiring freelance web designer and developer</h4>
-            <p>
+            <h3 class="section-title primary-border">Bio</h3>
+            <div>
+            <h4>I am an aspiring freelance web designer and developer.</h4>
+        <p>
                 I've spent the last year of my professional life learning and helping clients find their visual identities and bring them to light in the best way possible. </br>
+            </br>
                 I have worked with small and large businesses including [insert examples here], [here], and [here].
             </p>
         </section>
     <!--PORTFOLIO-->
         <section id="portfolio" class="work">
-            <h3 class="">Portfolio</h3>
+            <h3 class="section-title primary-border">Portfolio</h3>
             <h4>I help businesses create a brand or identity that is clear, strong, and reflective of what they are as an entity.</h4>
+            </br>
+            <p>
+                Here is some examples of my work.
+            </p>
         </section>
     <!--CONTACT ME-->
         <section id="contact-me" class="contact">
-            <h3 class="">Contact Me</h3>
+            <h3 class="section-title primary-border">Contact Me</h3>
             <div class="contact-info">
-                <h4>Charlie Houston</h4>
                 <ul>
                     <li>
                         <a href="tel:2104457296">210-445-7296</a>
@@ -73,6 +80,15 @@
                 </ul>
             </div>
         </section>
+
+          <!-- footer -->
+    <footer>
+        <h2>Thanks for checking me out!</h2>
+        <div>
+            <img src="./assets/images/My project.jpg">
+        </div>
+      </footer>
+      <!-- footer end -->
   </body>
 
 </html>
