css styling done

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-  <head>
+<head>
     <meta charset="UTF-8">
     <title>Charlie Houston</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link  rel="stylesheet" href="assets/style.css">
-    
-  </head>
+    <link rel="stylesheet" href="assets/style.css">
 
-  <body>
+</head>
+
+<body>
     <!-- Site Header -->
     <header>
-      <h1>
-          <a href="/">Charles Houston</a>
+        <h1>
+            <a href="/">Charles Houston</a>
         </h1>
         <nav>
-    <!--Unordered list-->
+            <!--Unordered list-->
             <ul>
-    <!--List items-->
+                <!--List items-->
                 <li>
                     <a href="#bio">Bio</a>
                 </li>
@@ -32,36 +32,45 @@
         </nav>
     </header>
     <!--Hero Section-->
-        <section class="hero">
-            <div class="hero-subtitle">
-            <h2>Welcome!</h2>
+        <div class="hero">
+            <h2 class="hero-subtitle">Welcome!</h2>
+        </div>
+    
+    <main>
+        <!--BIO-->
+        <section id="=bio" class="bio">
+            <h3 class="section-title ">Bio</h3>
+            <div class="vert-line">
+                <h4>I am an aspiring freelance web designer and developer.</h4>
+                <p>
+                    I've spent the last few months of my professional life learning and helping clients find their
+                    visual
+                    identities and bring them to light in the best way possible.
+                </p>
+                <p>
+                    I have worked with small and large businesses including [insert examples here], [here], and [here].
+                </p>
             </div>
         </section>
-    <!--BIO-->
-        <section id="=bio" class="bio">
-            <h3 class="section-title primary-border">Bio</h3>
-            <div>
-            <h4>I am an aspiring freelance web designer and developer.</h4>
-        <p>
-                I've spent the last year of my professional life learning and helping clients find their visual identities and bring them to light in the best way possible. </br>
-            </br>
-                I have worked with small and large businesses including [insert examples here], [here], and [here].
-            </p>
-        </section>
-    <!--PORTFOLIO-->
+
+        <!--PORTFOLIO-->
         <section id="portfolio" class="work">
-            <h3 class="section-title primary-border">Portfolio</h3>
-            <h4>I help businesses create a brand or identity that is clear, strong, and reflective of what they are as an entity.</h4>
-            </br>
-            <p>
-                Here is some examples of my work.
-            </p>
+            <h3 class="section-title ">Portfolio</h3>
+            <div class="vert-line">
+                <h4>I help businesses create a brand or identity that is clear, strong, and reflective of what they are
+                    as an
+                    entity.</h4>
+
+                <p>
+                    Here is some examples of my work.
+                </p>
+            </div>
         </section>
-    <!--CONTACT ME-->
+        <!--CONTACT ME-->
         <section id="contact-me" class="contact">
             <h3 class="section-title primary-border">Contact Me</h3>
-            <div class="contact-info">
-                <ul>
+            <div class="contact-info vert-line table">
+                <ul class="list">
                     <li>
                         <a href="tel:2104457296">210-445-7296</a>
                     </li>
@@ -69,7 +78,7 @@
                         <a href="mailto:gn4rtistic@gmail.com">gn4rtistic@gmail.com</a>
                     </li>
                     <li>
-                    <a href="https://github.com/gnartistic">Github</a>
+                        <a href="https://github.com/gnartistic">Github</a>
                     </li>
                     <li>
                         <a href="https://open.spotify.com/user/9o7s9mescfet5m7u7e65rcmxm">Spotify</a>
@@ -80,15 +89,16 @@
                 </ul>
             </div>
         </section>
+    </main>
 
-          <!-- footer -->
+    <!-- footer -->
     <footer>
         <h2>Thanks for checking me out!</h2>
         <div>
             <img src="./assets/images/My project.jpg">
         </div>
-      </footer>
-      <!-- footer end -->
-  </body>
+    </footer>
+    <!-- footer end -->
+</body>
 
 </html>
