--- a/index.html
+++ b/index.html
@@ -43,12 +43,10 @@
             <div class="vert-line">
                 <h4>I am an aspiring freelance web designer and developer.</h4>
                 <p>
-                    I've spent the last few months of my professional life learning and helping clients find their
-                    visual
-                    identities and bring them to light in the best way possible.
+                   Hello! I'm Charles Houston, but my friends call me Charlie! I like to travel, hike, and 
                 </p>
                 <p>
-                    I have worked with small and large businesses including [insert examples here], [here], and [here].
+                    
                 </p>
             </div>
         </section>
