media queries added test

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         </nav>
     </header>
     <!--Hero Section-->
-        <div class="hero">
-            <h2 class="hero-subtitle">Welcome!</h2>
-        </div>
-    
+    <div class="hero">
+        <h2 class="hero-subtitle">Welcome!</h2>
+    </div>
+
     <main>
         <!--BIO-->
         <section id="=bio" class="bio">
@@ -43,10 +43,15 @@
             <div class="vert-line">
                 <h4>I am an aspiring freelance web designer and developer.</h4>
                 <p>
-                   Hello! I'm Charles Houston, but my friends call me Charlie! I like to travel, hike, and 
+                    My name is Charles Houston, but my friends call me Charlie! I have a real passion for design and
+                    development, and not only for just software and web applications. In my proffesional life I have
+                    been a welder/fabricator, a pool technician, and a general contractor with a specialization in
+                    remodeling... so it's safe to say that I just like to build and create beautiful things.
                 </p>
                 <p>
-                    
+                    In my free time, I like to travel and explore with my wife, two dogs, and a taratula. I play guitar,
+                    mountain bike, and sculpt as hobbies. I believe that the most valuable thing in this world is time,
+                    and I try to spend mine wisely.
                 </p>
             </div>
         </section>
