made website mobile friendly

--- a/index.html
+++ b/index.html
@@ -38,59 +38,85 @@
 
     <main>
         <!--BIO-->
-        <section id="=bio" class="bio">
-            <h3 class="section-title ">Bio</h3>
-            <div class="vert-line">
-                <h4>I am an aspiring freelance web designer and developer.</h4>
-                <p>
-                    My name is Charles Houston, but my friends call me Charlie! I have a real passion for design and
-                    development, and not only for just software and web applications. In my proffesional life I have
-                    been a welder/fabricator, a pool technician, and a general contractor with a specialization in
-                    remodeling... so it's safe to say that I just like to build and create beautiful things.
-                </p>
-                <p>
-                    In my free time, I like to travel and explore with my wife, two dogs, and a taratula. I play guitar,
-                    mountain bike, and sculpt as hobbies. I believe that the most valuable thing in this world is time,
-                    and I try to spend mine wisely.
-                </p>
+        <section id="=bio">
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
+                    Bio
+                </h2>
             </div>
+            <div class="title">
+                <article class="content">
+                        <img src="assets/images/My project-1.jpg" alt="charlie houston's selfie">
+                    <div class="bio-text">
+                        <h4 class="statement">I am an aspiring freelance web designer and developer.</h4>
+                        <p>
+                            My name is Charles Houston, but my friends call me Charlie! I have a real passion for design
+                            and
+                            development, and not only for just software and web applications. In my proffesional life I
+                            have
+                            been a welder/fabricator, a pool technician, and a general contractor with a specialization
+                            in
+                            remodeling... so it's safe to say that I just like to build and create beautiful things.
+                        </p>
+                        <p>
+                            In my free time, I like to travel and explore with my wife, two dogs, and a taratula. I play
+                            guitar,
+                            mountain bike, and sculpt as hobbies. I believe that the most valuable thing in this world
+                            is time,
+                            and I try to spend mine wisely.
+                        </p>
+                    </div>
+                </article>
         </section>
 
         <!--PORTFOLIO-->
-        <section id="portfolio" class="work">
-            <h3 class="section-title ">Portfolio</h3>
-            <div class="vert-line">
-                <h4>I help businesses create a brand or identity that is clear, strong, and reflective of what they are
-                    as an
-                    entity.</h4>
-
-                <p>
-                    Here is some examples of my work.
-                </p>
+        <section id="portfolio">
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
+                    Portfolio
+                </h2>
             </div>
+            <div class="title">
+                <article class="content">
+                    <div class="work-text">
+                        <h4 class="statement">I  help businesses create a brand or identity that is clear, strong, and reflective of what they are
+                            as an
+                            entity.</h4>
+                        <p>
+                            Here is some examples of my work.
+                        </p>
+                    </div>
+                </article>
         </section>
         <!--CONTACT ME-->
-        <section id="contact-me" class="contact">
-            <h3 class="section-title primary-border">Contact Me</h3>
-            <div class="contact-info vert-line table">
-                <ul class="list">
-                    <li>
-                        <a href="tel:2104457296">210-445-7296</a>
-                    </li>
-                    <li>
-                        <a href="mailto:gn4rtistic@gmail.com">gn4rtistic@gmail.com</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/gnartistic">Github</a>
-                    </li>
-                    <li>
-                        <a href="https://open.spotify.com/user/9o7s9mescfet5m7u7e65rcmxm">Spotify</a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/gn4rtistic/">Instagram</a>
-                    </li>
-                </ul>
+        <section id="=contact-me" class="contact">
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
+                    Contact Me
+                </h2>
             </div>
+            <div class="title">
+                <article class="content">
+                    <div class="contact">
+                        <ul class="list">
+                            <li>
+                                <a href="tel:2104457296">210-445-7296</a>
+                            </li>
+                            <li>
+                                <a href="mailto:gn4rtistic@gmail.com">gn4rtistic@gmail.com</a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/gnartistic">Github</a>
+                            </li>
+                            <li>
+                                <a href="https://open.spotify.com/user/9o7s9mescfet5m7u7e65rcmxm">Spotify</a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/gn4rtistic/">Instagram</a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
         </section>
     </main>
 
