tweaked page to fully mpodify for multi viewports

--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
                         <p>
                             My name is Charles Houston, but my friends call me Charlie! I have a real passion for design
                             and
-                            development, and not only for just software and web applications. In my proffesional life I
+                            development, and not just software and web applications. In my proffesional life I
                             have
-                            been a welder/fabricator, a pool technician, and a general contractor with a specialization
+                            been a welder/fabricator, a carpenter, and a general contractor with a specialization
                             in
-                            remodeling... so it's safe to say that I just like to build and create beautiful things.
+                            remodeling... so it's safe to say that I just like to build and create things.
                         </p>
                         <p>
-                            In my free time, I like to travel and explore with my wife, two dogs, and a taratula. I play
+                            In my free time, I like to travel and explore with my wife and two dogs. I play
                             guitar,
-                            mountain bike, and sculpt as hobbies. I believe that the most valuable thing in this world
+                            mountain bike, and read for fun. Family is very important to me, so I also like to visit my parents and siblings often. I believe that the most valuable thing in this world
                             is time,
                             and I try to spend mine wisely.
                         </p>
@@ -79,12 +79,19 @@
             <div class="title">
                 <article class="content">
                     <div class="work-text">
-                        <h3 class="statement">I  help businesses create a brand or identity that is clear, strong, and reflective of what they are
+                        <h3 class="statement">
+                            I  help businesses create a brand or identity that is clear, strong, and reflective of what they are
                             as an
                             entity.</h3>
                         <p>
                             Here is some examples of my work.
                         </p>
+                    </div>
+                    <div>
+                        <a href="https://gnartistic.github.io/run-buddy/">
+                            <img alt="screenshot of run-buddy we app." src="https://ucarecdn.com/2d105d9f-ef79-45c1-bcf4-4e983a490dc9/">
+                        </a>
+                        <a href=""
                     </div>
                 </article>
         </section>
