--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Charlie Houston</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/style.css">
-
 </head>
 
 <body>
@@ -46,7 +45,8 @@
             </div>
             <div class="title">
                 <article class="content">
-                        <img src="assets/images/My project-1.jpg" alt="charlie houston's selfie">
+                    <img src="https://scontent.fphx1-2.fna.fbcdn.net/v/t1.6435-9/118001488_3521429204579899_5119218647581223500_n.jpg?_nc_cat=100&ccb=1-6&_nc_sid=174925&_nc_ohc=3h29-tTPP5EAX_3wwXF&_nc_ht=scontent.fphx1-2.fna&oh=00_AT9StIeO3b3a5xGNAuMN-TySep6r99Es4uBa8Nq93tekrA&oe=62A15B0E"
+                        alt="charlie houston's selfie">
                     <div class="bio-text">
                         <h3 class="statement">I am an aspiring freelance web designer and developer.</h3>
                         <p>
@@ -61,11 +61,26 @@
                         <p>
                             In my free time, I like to travel and explore with my wife and two dogs. I play
                             guitar,
-                            mountain bike, and read for fun. Family is very important to me, so I also like to visit my parents and siblings often. I believe that the most valuable thing in this world
+                            mountain bike, and read for fun. Family is very important to me, so I also like to visit my
+                            parents and siblings often. I believe that the most valuable thing in this world
                             is time,
                             and I try to spend mine wisely.
                         </p>
                     </div>
+                    <ul class="list">
+                        <li>
+                            <img src="https://scontent.fphx1-2.fna.fbcdn.net/v/t1.6435-9/208984584_4865659563449396_4729930713825081878_n.jpg?_nc_cat=105&ccb=1-6&_nc_sid=8bfeb9&_nc_ohc=Mt2iokRvwDoAX8BBSeU&_nc_ht=scontent.fphx1-2.fna&oh=00_AT9Tem52HQ6Kc7Y2tbaUajkGZpxmqVz6pH4Cn_2saTMNQA&oe=62A2DE4B"
+                                alt="charlie and maegan houston in las vegas ,nv.">
+                        </li>
+                        <li>
+                            <img src="https://scontent.fphx1-2.fna.fbcdn.net/v/t39.30808-6/262099912_4994684850587653_401779041802328450_n.jpg?_nc_cat=101&ccb=1-6&_nc_sid=730e14&_nc_ohc=yecqdTJsAP8AX84Nv37&_nc_ht=scontent.fphx1-2.fna&oh=00_AT_yFPK4mmDhzpW3NmS09N_Jl91nhmSQAtMslZCt9kkMeA&oe=628195A0"
+                                alt="view on lost maples park">
+                        </li>
+                        <li>
+                            <img src="https://scontent.fphx1-2.fna.fbcdn.net/v/t1.6435-9/129663839_3893393267383489_6062812808568672058_n.jpg?_nc_cat=100&ccb=1-6&_nc_sid=174925&_nc_ohc=p9uNYYeq3CkAX8dU7R3&_nc_ht=scontent.fphx1-2.fna&oh=00_AT82I3b6GEubedQn9foxefzPbzpsP6SAp-WrCpPS7wTD1A&oe=62A2363D"
+                                alt="charlie in front of the hopscotch gallery in San Antonio,tx">
+                        </li>
+                    </ul>
                 </article>
         </section>
 
@@ -80,19 +95,34 @@
                 <article class="content">
                     <div class="work-text">
                         <h3 class="statement">
-                            I  help businesses create a brand or identity that is clear, strong, and reflective of what they are
+                            I help businesses create a brand or identity that is clear, strong, and reflective of what
+                            they are
                             as an
                             entity.</h3>
                         <p>
                             Here is some examples of my work.
                         </p>
                     </div>
-                    <div>
-                        <a href="https://gnartistic.github.io/run-buddy/">
-                            <img alt="screenshot of run-buddy we app." src="https://ucarecdn.com/2d105d9f-ef79-45c1-bcf4-4e983a490dc9/">
-                        </a>
-                        <a href=""
-                    </div>
+                    <ul class="list">
+                        <li>
+                            <a href="https://gnartistic.github.io/run-buddy/">
+                                <h3>Run-buddy</h3>
+                                <img src="https://images2.imgbox.com/e8/86/9TykuAFU_o.jpeg">
+                                <img src="https://images2.imgbox.com/b0/31/lbAcKk7l_o.jpeg">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://gnartistic.github.io/horiseon/">
+                                <h3>Horiseon - Search Engine Optimization</h3>
+                                <img src="https://images2.imgbox.com/ea/99/MDfuV0iT_o.jpeg">
+                                <img src="https://images2.imgbox.com/d0/44/8ZN9MWaL_o.jpeg" </a>
+                        </li>
+                        <li>
+                            <a href="https://gnartistic.github.io/charlie-houston/">
+                                <img src="">
+                            </a>
+                        </li>
+                    </ul>
                 </article>
         </section>
         <!--CONTACT ME-->
