--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Charlie Houston</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/style.css">
 </head>
 
@@ -17,7 +16,7 @@
         <nav>
             <!--Unordered list-->
             <ul>
-                <!--List items-->
+                <!--nav links-->
                 <li>
                     <a href="#bio">Bio</a>
                 </li>
@@ -25,7 +24,7 @@
                     <a href="#portfolio">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#contact-me">Contact Me</a>
+                    <a href="#contact">Contact Me</a>
                 </li>
             </ul>
         </nav>
@@ -45,8 +44,12 @@
             </div>
             <div class="title">
                 <article class="content">
-                    <img src="https://scontent.fphx1-2.fna.fbcdn.net/v/t1.6435-9/118001488_3521429204579899_5119218647581223500_n.jpg?_nc_cat=100&ccb=1-6&_nc_sid=174925&_nc_ohc=3h29-tTPP5EAX_3wwXF&_nc_ht=scontent.fphx1-2.fna&oh=00_AT9StIeO3b3a5xGNAuMN-TySep6r99Es4uBa8Nq93tekrA&oe=62A15B0E"
-                        alt="charlie houston's selfie">
+                    <!--avatar photo-->
+                    <div>
+                        <img class="avatar" src="https://scontent.fphx1-2.fna.fbcdn.net/v/t1.6435-9/118001488_3521429204579899_5119218647581223500_n.jpg?_nc_cat=100&ccb=1-6&_nc_sid=174925&_nc_ohc=3h29-tTPP5EAX_3wwXF&_nc_ht=scontent.fphx1-2.fna&oh=00_AT9StIeO3b3a5xGNAuMN-TySep6r99Es4uBa8Nq93tekrA&oe=62A15B0E"
+                            alt="charlie houston's selfie">
+                    </div>
+                    <!--bio text-->
                     <div class="bio-text">
                         <h3 class="statement">I am an aspiring freelance web designer and developer.</h3>
                         <p>
@@ -67,20 +70,21 @@
                             and I try to spend mine wisely.
                         </p>
                     </div>
-                    <ul class="list">
-                        <li>
+                    <!--bio pics-->
+                    <div class="container">
+                        <div class="item">
                             <img src="https://scontent.fphx1-2.fna.fbcdn.net/v/t1.6435-9/208984584_4865659563449396_4729930713825081878_n.jpg?_nc_cat=105&ccb=1-6&_nc_sid=8bfeb9&_nc_ohc=Mt2iokRvwDoAX8BBSeU&_nc_ht=scontent.fphx1-2.fna&oh=00_AT9Tem52HQ6Kc7Y2tbaUajkGZpxmqVz6pH4Cn_2saTMNQA&oe=62A2DE4B"
                                 alt="charlie and maegan houston in las vegas ,nv.">
-                        </li>
-                        <li>
+                        </div>
+                        <div class="item-tall">
                             <img src="https://scontent.fphx1-2.fna.fbcdn.net/v/t39.30808-6/262099912_4994684850587653_401779041802328450_n.jpg?_nc_cat=101&ccb=1-6&_nc_sid=730e14&_nc_ohc=yecqdTJsAP8AX84Nv37&_nc_ht=scontent.fphx1-2.fna&oh=00_AT_yFPK4mmDhzpW3NmS09N_Jl91nhmSQAtMslZCt9kkMeA&oe=628195A0"
                                 alt="view on lost maples park">
-                        </li>
-                        <li>
+                        </div>
+                        <div class="item">
                             <img src="https://scontent.fphx1-2.fna.fbcdn.net/v/t1.6435-9/129663839_3893393267383489_6062812808568672058_n.jpg?_nc_cat=100&ccb=1-6&_nc_sid=174925&_nc_ohc=p9uNYYeq3CkAX8dU7R3&_nc_ht=scontent.fphx1-2.fna&oh=00_AT82I3b6GEubedQn9foxefzPbzpsP6SAp-WrCpPS7wTD1A&oe=62A2363D"
                                 alt="charlie in front of the hopscotch gallery in San Antonio,tx">
-                        </li>
-                    </ul>
+                        </div>
+                    </div>
                 </article>
         </section>
 
@@ -94,6 +98,7 @@
             <div class="title">
                 <article class="content">
                     <div class="work-text">
+                        <!--declaration statement-->
                         <h3 class="statement">
                             I help businesses create a brand or identity that is clear, strong, and reflective of what
                             they are
@@ -103,6 +108,7 @@
                             Here is some examples of my work.
                         </p>
                     </div>
+                    <!--links to work-->
                     <ul class="list">
                         <li>
                             <a href="https://gnartistic.github.io/run-buddy/">
@@ -126,7 +132,7 @@
                 </article>
         </section>
         <!--CONTACT ME-->
-        <section id="=contact-me" class="contact">
+        <section id="contact" class="contact">
             <div class="flex-row">
                 <h2 class="section-title primary-border">
                     Contact Me
@@ -134,20 +140,25 @@
             </div>
             <div class="title">
                 <article class="content">
-                    <div class="contact">
+                    <div>
                         <ul class="list">
+                            <!--PHONE-->
                             <li>
                                 <a href="tel:2104457296">210-445-7296</a>
                             </li>
+                            <!--EMAIL-->
                             <li>
                                 <a href="mailto:gn4rtistic@gmail.com">gn4rtistic@gmail.com</a>
                             </li>
+                            <!--GITHUB-->
                             <li>
                                 <a href="https://github.com/gnartistic">Github</a>
                             </li>
+                            <!--SPOTIFY-->
                             <li>
                                 <a href="https://open.spotify.com/user/9o7s9mescfet5m7u7e65rcmxm">Spotify</a>
                             </li>
+                            <!--INSTAGRAM-->
                             <li>
                                 <a href="https://www.instagram.com/gn4rtistic/">Instagram</a>
                             </li>
@@ -160,6 +171,7 @@
     <!-- footer -->
     <footer>
         <h2>Thanks for checking me out!</h2>
+        <!--footer pic-->
         <div>
             <img src="./assets/images/My project.jpg">
         </div>
